--- a/docs/examples/streamlake/loading_data_part3.ipynb
+++ b/docs/examples/streamlake/loading_data_part3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading Data Part 3: Combining Data from Multiple Instruments\n",
+    "# Loading Part 3: Lake\n",
     "\n",
     "In this example, we explore the process of working with data from multiple instruments and consolidating them into a single `Lake` object. A `Lake` object serves as a convenient container for aggregating multiple `Stream`s, each representing data from individual instruments.\n",
     "\n",
