--- a/pr-preview/pr-407/_sources/examples/streamlake/loading_data_part1.ipynb
+++ b/pr-preview/pr-407/_sources/examples/streamlake/loading_data_part1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading Data Part 1\n",
+    "# Loading Part 1: Into & 1D Data\n",
     "\n",
     "This notebook is designed to guide you through the process of loading, cleaning, formatting, and processing data, a common task in aerosol research. You'll learn how to automate these repetitive tasks using Python scripts, specifically leveraging the functionalities of the `particula.data` package. This will streamline your data handling process, making your research more efficient.\n"
    ]
