--- a/pr-preview/pr-407/_sources/examples/streamlake/loading_data_part2.ipynb
+++ b/pr-preview/pr-407/_sources/examples/streamlake/loading_data_part2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " # Loading Data Part 2\n",
+    " # Loading Part 2: Sizer Data\n",
     "\n",
     "Welcome to Part 2 of our data loading series! This section builds upon the concepts and techniques introduced in Part 1. If you haven't gone through the first part, we highly recommend you do so to get a firm foundation. Here, we'll dive into handling 2-dimensional data, such as size distributions, which are common in fields like environmental science and engineering.\n",
     "\n",
