--- a/pr-preview/pr-407/_sources/examples/streamlake/loading_data_part4.ipynb
+++ b/pr-preview/pr-407/_sources/examples/streamlake/loading_data_part4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading Data Part 4\n",
+    "# Loading Part 4: Settings Files\n",
     "\n",
     "In this part of the tutorial, we will explore how to save and load stream and lake settings dictionaries. This can be incredibly useful for preserving your settings, sharing them with others, or simply avoiding the need to retype everything.\n",
     "\n",
