--- a/pr-preview/pr-407/_sources/examples/streamlake/stream_stats_part1.ipynb
+++ b/pr-preview/pr-407/_sources/examples/streamlake/stream_stats_part1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " # Stream Stats\n",
+    " # Stream: Averaging and Outliers\n",
     "\n",
     " This example shows how to clean up a stream of data by removing outliers and\n",
     " and averaging the values over time. "
