bench mark Fixes #411

--- a/docs/examples/lagrangian/basic_lagrangian_box.ipynb
+++ b/docs/examples/lagrangian/basic_lagrangian_box.ipynb
@@ -55,11 +55,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOTAL_NUMBER_OF_PARTICLES = 200\n",
     "# Setting up the Simulation Parameters and Initial Conditions\n",
     "\n",
     "# Define fixed parameters\n",
-    "TOTAL_NUMBER_OF_PARTICLES = 200\n",
+    "TOTAL_NUMBER_OF_PARTICLES = 2000\n",
     "TIME_STEP = 0.01\n",
     "SIMULATION_TIME = 100\n",
     "MASS = 3\n",
@@ -164,22 +163,22 @@
     "    # Apply boundary conditions for the cube (wrap-around)\n",
     "    position = boundary.wrapped_cube(position=position, cube_side=CUBE_SIDE)\n",
     "\n",
-    "    # Calculate pairwise distances between particles\n",
-    "    distance_matrix = particle_pairs.calculate_pairwise_distance(\n",
-    "        position=position)\n",
+    "    # # Calculate pairwise distances between particles\n",
+    "    # distance_matrix = particle_pairs.calculate_pairwise_distance(\n",
+    "    #     position=position)\n",
     "\n",
-    "    # Adjust distances for the radius of each particle (surface-to-surface\n",
-    "    # distance)\n",
-    "    radius = particle_property.radius(mass=mass, density=density)\n",
-    "    distance_matrix -= radius.unsqueeze(1) + radius.unsqueeze(0)\n",
+    "    # # Adjust distances for the radius of each particle (surface-to-surface\n",
+    "    # # distance)\n",
+    "    # radius = particle_property.radius(mass=mass, density=density)\n",
+    "    # distance_matrix -= radius.unsqueeze(1) + radius.unsqueeze(0)\n",
     "\n",
-    "    # Identify pairs of particles that have collided\n",
-    "    valid_collision_indices_pairs = collisions.find_collisions(\n",
-    "        distance_matrix=distance_matrix, indices=indices, mass=mass)\n",
+    "    # # Identify pairs of particles that have collided\n",
+    "    # valid_collision_indices_pairs = collisions.find_collisions(\n",
+    "    #     distance_matrix=distance_matrix, indices=indices, mass=mass)\n",
     "\n",
-    "    # Coalesce particles that have collided and update their velocity and mass\n",
-    "    velocity, mass = collisions.coalescence(\n",
-    "        velocity=velocity, mass=mass, collision_indices_pairs=valid_collision_indices_pairs)\n",
+    "    # # Coalesce particles that have collided and update their velocity and mass\n",
+    "    # velocity, mass = collisions.coalescence(\n",
+    "    #     velocity=velocity, mass=mass, collision_indices_pairs=valid_collision_indices_pairs)\n",
     "\n",
     "    # Calculate the force acting on the particles (e.g., gravity)\n",
     "    force = mass * gravity\n",
