revised names in prartical props

--- a/docs/examples/lagrangian/basic_lagrangian_box.ipynb
+++ b/docs/examples/lagrangian/basic_lagrangian_box.ipynb
@@ -170,7 +170,7 @@
     "\n",
     "    # Adjust distances for the radius of each particle (surface-to-surface\n",
     "    # distance)\n",
-    "    radius = particle_property.radius(mass=mass, density=density)\n",
+    "    radius = particle_property.radius_calculation(mass=mass, density=density)\n",
     "    distance_matrix -= radius.unsqueeze(1) + radius.unsqueeze(0)\n",
     "\n",
     "    # Identify pairs of particles that have collided\n",
