--- a/pr-preview/pr-419/_sources/examples/lagrangian/basic_lagrangian_box.ipynb
+++ b/pr-preview/pr-419/_sources/examples/lagrangian/basic_lagrangian_box.ipynb
@@ -148,8 +148,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total wall time: 24.14953637123108 seconds\n",
-      "Ratio of wall time to simulation time: 0.24149536371231078\n"
+      "Total wall time: 19.37943959236145 seconds\n",
+      "Ratio of wall time to simulation time: 0.1937943959236145\n"
      ]
     }
    ],
@@ -254,7 +254,7 @@
     "filter_zero_mass = mass_final > 0\n",
     "\n",
     "# Calculate the radius and area of each particle\n",
-    "radius_final = particle_property.radius(mass=mass_final, density=density)\n",
+    "radius_final = particle_property.radius_calculation(mass=mass_final, density=density)\n",
     "particle_area = np.pi * radius_final**2\n",
     "\n",
     "# Display the number of remaining particles\n",
