--- a/pr-preview/pr-419/_sources/examples/lagrangian/friction_froce.ipynb
+++ b/pr-preview/pr-419/_sources/examples/lagrangian/friction_froce.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Realistic Mass and Velocity in Aerosol Particle Simulations\n",
+    "# Realistic Drag, Mass, and Velocity\n",
     "\n",
     "This notebook section focuses on simulating cloud droplet-sized aerosol particles (around 100 microns) with accurate mass and velocity. Key improvements include:\n",
     "\n",
@@ -206,14 +206,19 @@
     "#### Mathematical Representation\n",
     "\n",
     "The friction factor $(f_p)$ is described by:\n",
-    "$$ f_p = \\frac{3 \\pi D_p \\mu}{D_c} $$\n",
-    "where $D_p$ is the particle diameter, $\\mu$ is the dynamic viscosity, and $D_c$ is the diffusion coefficient scale.\n",
     "\n",
-    "The drag force ($F_d\\$) is then:\n",
+    "$$ f_p = \\frac{3 \\pi D_p \\mu}{D_c} $$\n",
+    "\n",
+    "where $D_p$ is the particle diameter, $\\mu$ is the dynamic viscosity, and $D_c$ is the diffusion coefficient.\n",
+    "\n",
+    "The drag force, $F_d$, is then:\n",
+    "\n",
     "$$ F_d = f_p v_p $$\n",
+    "\n",
     "with $v_p$ representing the particle velocity.\n",
     "\n",
     "Considering gravitational settling in a fluid at rest $(u_{fluid} = 0)$, the motion equation becomes:\n",
+    "\n",
     "$$ m_p \\frac{dv}{dt} = m_pg + f_p (u_{fluid}-v_p) $$\n",
     "\n",
     "### Implementing the Friction Factor in the Simulation\n",
