turn of fit disp

--- a/docs/examples/wall_loss/forward_fit_simple.ipynb
+++ b/docs/examples/wall_loss/forward_fit_simple.ipynb
@@ -438,7 +438,7 @@
     "        concentration_m3: np.ndarray,\n",
     "        radius_bins: np.ndarray,\n",
     "        guess_ktp_value=1,\n",
-    "        display_fitting=True,\n",
+    "        display_fitting=False,\n",
     ") -> float:\n",
     "    \"\"\" optimized for ktp value\"\"\"\n",
     "\n",
