--- a/pr-preview/pr-427/_sources/examples/wall_loss/forward_fit_simple.ipynb
+++ b/pr-preview/pr-427/_sources/examples/wall_loss/forward_fit_simple.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wall Fit Simple\n",
+    "# Simple Wall Loss Fit\n",
     "\n",
     "In this section, we integrate particle simulations with data import tools to optimize wall-loss parameters in a chamber environment. This process is essential in understanding and accurately modeling the behavior of aerosol particles within a confined space.\n",
     "\n",
