updated markdown text

--- a/docs/examples/light_scattering/mie_basics.ipynb
+++ b/docs/examples/light_scattering/mie_basics.ipynb
@@ -127,7 +127,7 @@
     "\n",
     "- **`n_medium`**: The refractive index of the medium surrounding the particles, with a default value of 1.0, representing air or vacuum. This parameter is essential for adjusting the Mie scattering calculations based on the medium's optical properties.\n",
     "\n",
-    "- **`pms`** (Probability Mass Function): A boolean flag indicating whether the size distribution is provided in the form of a probability mass function. When `True`, it signifies that the `number_per_cm3` array represents a normalized distribution, affecting how the bulk optical properties are computed.\n",
+    "- **`pms`** (Probability Mass Function): A boolean flag indicating whether the size distribution is provided in the form of a probability mass function. When `True`, it signifies that the `number_per_cm3` array represents a binned distribution (sum of bins is total number), affecting how the bulk optical properties are computed. When `False`, the function assumes the array represents a continuous probability density function, where the area under the curve is equal to total particle number.\n",
     "\n",
     "- **`as_dict`**: This boolean flag determines the format of the function's output. If set to `True`, the function returns a dictionary containing the calculated optical properties, providing a convenient structure for accessing specific values.\n",
     "\n",
@@ -137,7 +137,7 @@
     "\n",
     "- **`truncation_calculation`**: A boolean flag that, when `True`, activates the truncation of the scattering efficiency calculation. This adjustment is based on a multiple of the backscattering coefficient, addressing truncation errors inherent in certain measurement instruments.\n",
     "\n",
-    "- **`truncation_b_sca_multiple`**: An optional float specifying the multiple of the backscattering coefficient used for truncating the scattering efficiency. This parameter is required if `truncation_calculation` is `True` and is key to accurately correcting for instrument truncation effects.\n",
+    "- **`truncation_b_sca_multiple`**: An optional float specifying the multiple of the scattering coefficient used for truncating the scattering efficiency. This parameter is required if `truncation_calculation` is `True` and is key to accurately correcting for instrument truncation effects.\n",
     "\n",
     "### Practical Implications\n",
     "\n",
@@ -219,7 +219,7 @@
     "\n",
     "### Building Blocks for Advanced Analysis\n",
     "\n",
-    "These components serve as critical building blocks for more advanced analyses, particularly in studying humidified aerosol distributions (next notebook). In real atmospheric conditions, aerosol particles often undergo hygroscopic growth, absorbing water from the air and increasing in size. This water uptake significantly affects the optical properties of aerosols, influencing their scattering and absorption behaviors and, consequently, their impact on climate and visibility.\n",
+    "These components serve as critical building blocks for more advanced analyses, particularly in studying the next section: [Humidified Particle Scattering](./humid_scattering.ipynb). In real atmospheric conditions, aerosol particles often undergo hygroscopic growth, absorbing water from the air and increasing in size. This water uptake significantly affects the optical properties of aerosols, influencing their scattering and absorption behaviors and, consequently, their impact on climate and visibility.\n",
     "\n",
     "The code and methodologies discussed provide a starting point for such advanced analyses, enabling the exploration of how aerosol optical properties change with humidity. This understanding is crucial for accurately assessing aerosols' environmental and climatic impacts, highlighting the importance of these computational tools in atmospheric sciences."
    ]
