added save todo

--- a/docs/examples/light_scattering/caps_instrument.ipynb
+++ b/docs/examples/light_scattering/caps_instrument.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CAPS corrections"
+    "# CAPS corrections\n",
+    "\n",
+    "- [ ] save out streams as text with settings to load to streams\n",
+    "- [ ] save out lakes as text with settings to load to lakes\n",
+    "- [ ] save out as pk for both, but unroll the data"
    ]
   },
   {
