loaded sizer and caps data

--- a/docs/examples/light_scattering/caps_instrument.ipynb
+++ b/docs/examples/light_scattering/caps_instrument.ipynb
@@ -6,9 +6,14 @@
    "source": [
     "# CAPS corrections\n",
     "\n",
-    "- [ ] save out streams as text with settings to load to streams\n",
-    "- [ ] save out lakes as text with settings to load to lakes\n",
-    "- [ ] save out as pk for both, but unroll the data"
+    "- [ ] save out as pk for both\n",
+    "- [ ] load raw data and save\n",
+    "- [ ] clean the data\n",
+    "- [ ] process the data\n",
+    "- [ ] merge sizer\n",
+    "- [ ] simulate size cut\n",
+    "- [ ] truncation correction\n",
+    "- [ ] save out as csv for all"
    ]
   },
   {
