--- a/pr-preview/pr-436/_sources/examples/light_scattering/caps_instrument.ipynb
+++ b/pr-preview/pr-436/_sources/examples/light_scattering/caps_instrument.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# CAPS corrections\n",
     "\n",
-    "- [ ] save out as pk for both\n",
-    "- [ ] load raw data and save\n",
-    "- [ ] clean the data\n",
+    "- [x] save out as pk for both\n",
+    "- [x] load raw data and save\n",
+    "- [x] clean the data\n",
     "- [ ] process the data\n",
-    "- [ ] merge sizer\n",
+    "- [x] merge sizer\n",
     "- [ ] simulate size cut\n",
     "- [ ] truncation correction\n",
     "- [ ] save out as csv for all"
