update utilities docs

--- a/docs/documentation/utilities/convert_size_dist_scales.ipynb
+++ b/docs/documentation/utilities/convert_size_dist_scales.ipynb
@@ -4,18 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Converting Distributions\n",
+    "\n",
     "Particle size distributions play a critical role in aerosol science, impacting areas such as air quality monitoring, environmental health, and various industrial processes. These distributions provide insights into the number, volume, or mass concentration of aerosol particles across different size ranges, aiding in the analysis of aerosol behavior and effects. For specific analyses or models, converting between size distribution scales, like from number to volume concentration, is often necessary. This document introduces a Python-based size distribution converter designed to facilitate conversions across different aerosol size distribution scales without the need to manually handle conversion formulas or functions, employing a factory pattern to determine the appropriate conversion strategy based on the scales involved.\n",
     "\n",
     "### Aerosol Size Distribution Scales:\n",
     "\n",
-    "Aerosol size distributions are described using various scales and metrics, each catering to distinct analytical needs or practical applications:\n",
+    "Aerosol size distributions are characterized through various metrics and scales, with each serving specific purposes in analysis and practical application. These descriptions offer a more nuanced understanding of each type:\n",
     "\n",
-    "1. **Number Concentration (dN/dlogDp)**: Represents the count of particles per unit volume of air for a specified size, crucial for assessing inhalation risks.\n",
-    "2. **Volume or Mass Concentration (dV/dlogDp or dM/dlogDp)**: Indicates aerosol mass-related characteristics, like visibility reduction. *Not yet implemented.*\n",
-    "3. **Surface Area Concentration (dA/dlogDp)**: Evaluates aerosols' reactive surface area with other substances. *Not yet implemented.*\n",
-    "4. **Probability Density Function (PDF)**: Offers a statistical view of particle sizes, aiding in stochastic modeling. [Wikipedia link](https://en.wikipedia.org/wiki/Probability_density_function)\n",
-    "5. **Probability Mass Spectrum (PMS)**: Provides a discrete approximation of the PDF, facilitating computational modeling. [Wikipedia link](https://en.wikipedia.org/wiki/Probability_mass_function)\n",
-    "    - PMS is the measured dN (number concentration).\n",
+    "1. **Number Concentration (dN/dlogDp)**: This metric quantifies the number of aerosol particles within a specified size range per unit volume of air. It is essential for assessing particle prevalence in environmental and health-related studies, providing a direct measure of how many particles are present in a given volume.\n",
+    "\n",
+    "2. NOT IMPLEMENTED **Mass Concentration (dM/dlogDp)**: Indicates the total mass of particles within a specific size range per unit volume of air. This measure is crucial for understanding the mass-related impacts of aerosols on health, visibility, and climate, as it relates directly to the amount of material in the atmosphere.\n",
+    "\n",
+    "3. NOT IMPLEMENTED **Volume Concentration (dV/dlogDp)**: This scale measures the collective volume of particles within a specified size range per unit volume of air. It's particularly useful for understanding the packing density and potential space occupancy of aerosols in a given volume, affecting light scattering and particle deposition processes.\n",
+    "\n",
+    "4. NOT IMPLEMENTED **Surface Area Concentration (dA/dlogDp)**: Provides the total surface area of particles within each size bin per unit volume of air. Though not implemented yet, this metric is vital for evaluating the interaction potential of aerosols with gases and other particles, as well as their reactivity and potential health impacts related to surface chemistry.\n",
+    "\n",
+    "5. **Probability Density Function (PDF)**: [Wikipedia link](https://en.wikipedia.org/wiki/Probability_density_function) A statistical representation that describes the likelihood of particles existing within specific size intervals. The PDF is instrumental in stochastic modeling, offering insights into the overall shape and characteristics of the size distribution, which helps in predicting aerosol behavior under various conditions.\n",
+    "\n",
+    "6. **Probability Mass Spectrum (PMS)**: [Wikipedia link](https://en.wikipedia.org/wiki/Probability_mass_function) Acts as a discrete counterpart to the PDF, providing a quantized view of the size distribution that is especially useful for numerical and computational modeling. The PMS is essentially a snapshot of the number concentration (dN) distributed across discrete size bins, enabling detailed analysis and simulation of aerosol dynamics.\n",
+    "\n",
+    "These metrics facilitate a comprehensive analysis of aerosol properties and behaviors, enabling researchers and practitioners to tailor their approaches based on the specific requirements of their work, whether it be in environmental monitoring, health impact assessment, or atmospheric science.\n",
     "\n",
     "### The Converter Class and Factory Pattern:\n",
     "\n",
