--- a/pr-preview/pr-445/_sources/documentation/next/next_gas.ipynb
+++ b/pr-preview/pr-445/_sources/documentation/next/next_gas.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from particula.base.gas import Gas, GasSpecies"
+    "from particula.next.gas import Gas, GasSpecies"
    ]
   },
   {
