update intro to vapor pressure

--- a/docs/documentation/next/next_vapor_pressure.ipynb
+++ b/docs/documentation/next/next_vapor_pressure.ipynb
@@ -6,11 +6,18 @@
    "source": [
     "# Vapor Pressure\n",
     "\n",
-    "For an aerosol (ga phase + particle phase) in equilibrium with a liquid phase, the vapor pressure is the pressure of the vapor in equilibrium with the liquid phase. The vapor pressure is a measure of the tendency of particles to escape from the liquid phase and enter the gas phase. The vapor pressure dependence on temperature can take a few forms.\n",
+    "Vapor pressure is defined as the pressure exerted by a vapor in equilibrium with its liquid or solid phase. It is a crucial measure for understanding the tendency of molecules to transition from the liquid phase to the gas phase. This property is particularly important in systems where an aerosol (gas phase + particle phase) is in equilibrium with both phases.\n",
     "\n",
-    "In this notebook, we will cover the vapor pressure strategies currently implemented in the `vapor_presure` module. \n",
+    "The vapor pressure varies with temperature, and this variation can manifest in several forms. Understanding these changes is key to predicting how substances will behave under different temperature conditions.\n",
     "\n",
-    "Units are always in base SI units (kg/mol, kg/m^3, K, Pa)."
+    "In this notebook, we will explore the strategies for calculating vapor pressure as implemented in the `vapor_pressure` module. These strategies are essential for accurately modeling and understanding the behavior of aerosols in equilibrium with a liquid phase.\n",
+    "\n",
+    "## Units\n",
+    "All measurements and calculations in this module adhere to the base SI units:\n",
+    "- Molar mass is in kilograms per mole (kg/mol).\n",
+    "- Concentration is in kilograms per cubic meter (kg/m^3).\n",
+    "- Temperature is in Kelvin (K).\n",
+    "- Pressure is in Pascals (Pa)."
    ]
   },
   {
