--- a/docs/documentation/next/next_gas_species.ipynb
+++ b/docs/documentation/next/next_gas_species.ipynb
@@ -269,6 +269,8 @@
     "\n",
     "The next section is one more layer of abstraction, where we will define the `GasMixture` class to manage multiple gas species within a single mixture. This class will enable us to handle complex gas mixtures effectively and efficiently, paving the way particle to gas interactions.\n",
     "\n",
+    "# Help Calls\n",
+    "\n",
     "Below are the help calls for the `GasSpecies` and `GasSpeciesBuilder` classes, which provide detailed information on their properties and methods for further exploration and understanding."
    ]
   },
