--- a/pr-preview/pr-445/_sources/documentation/next/next_gas_species.ipynb
+++ b/pr-preview/pr-445/_sources/documentation/next/next_gas_species.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,9 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GasSpecies(name=Water)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an instance of GasSpeciesBuilder\n",
     "water_builder = GasSpeciesBuilder()\n",
@@ -117,7 +125,8 @@
     "    .condensable(True) \\\n",
     "    .concentration(0.017) \\\n",
     "    .build()  # Finalize and create the GasSpecies object\n",
-    "# molar mass in kg/mol, concentration in kg/m3"
+    "# molar mass in kg/mol, concentration in kg/m3\n",
+    "print(water_species)"
    ]
   },
   {
@@ -133,9 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GasSpecies(name=['butanol' 'styrene'])\n"
+     ]
+    }
+   ],
    "source": [
     "# Define molar masses for organic species (Butanol and Styrene) in kilograms per mole (kg/mol).\n",
     "organic_molar_mass = np.array([0.074121, 104.15e-3])  # Molar mass for Butanol and Styrene respectively.\n",
@@ -160,7 +177,8 @@
     "    .build()  # Finalize and create the GasSpecies objects\n",
     "\n",
     "# The `build()` method validates all the properties are set and returns the constructed GasSpecies object(s).\n",
-    "# Here, organic_species will contain the built GasSpecies instances for Butanol and Styrene."
+    "# Here, organic_species will contain the built GasSpecies instances for Butanol and Styrene.\n",
+    "print(organic_species)"
    ]
   },
   {
@@ -174,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
