fixed particle example

--- a/docs/documentation/next/next_particle.ipynb
+++ b/docs/documentation/next/next_particle.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "# Assuming necessary imports\n",
     "import numpy as np\n",
-    "from particula.base.particle import (\n",
+    "from particula.next.particle import (\n",
     "    create_particle_strategy,\n",
     "    Particle,\n",
     "    MassBasedStrategy,\n",
