change to gas vapor_pressure

--- a/docs/documentation/next/next_gas_species.ipynb
+++ b/docs/documentation/next/next_gas_species.ipynb
@@ -31,7 +31,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Particula imports\n",
-    "from particula.next.vapor_pressure import vapor_pressure_factory\n",
+    "from particula.next.gas_vapor_pressure import vapor_pressure_factory\n",
     "from particula.next.gas_species import GasSpecies, GasSpeciesBuilder"
    ]
   },
