--- a/docs/documentation/next/next_vapor_pressure.ipynb
+++ b/docs/documentation/next/next_vapor_pressure.ipynb
@@ -30,7 +30,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Import the functions from the particula package\n",
-    "from particula.next import vapor_pressure"
+    "from particula.next import gas_vapor_pressure"
    ]
   },
   {
@@ -107,20 +107,20 @@
    "source": [
     "# Initialize a specific strategy for calculating butanol's vapor pressure using Antoine's equation.\n",
     "# We set the coefficients 'a', 'b', and 'c' which are specific to butanol.\n",
-    "butanol_antione = vapor_pressure.AntoineVaporPressureStrategy(\n",
+    "butanol_antione = gas_vapor_pressure.AntoineVaporPressureStrategy(\n",
     "    a=7.838, b=1558.19, c=196.881)\n",
     "\n",
     "# Initialize a strategy for styrene using a factory method.\n",
     "# A factory method is a way to create objects without specifying the exact class of object that will be created.\n",
     "# We pass 'antoine' as the strategy name and the coefficients as a dictionary.\n",
     "styrene_coefficients = {'a': 6.924, 'b': 1420, 'c': 226}\n",
-    "styrene_antione = vapor_pressure.vapor_pressure_factory(\n",
+    "styrene_antione = gas_vapor_pressure.vapor_pressure_factory(\n",
     "    strategy='antoine', **styrene_coefficients)\n",
     "\n",
     "# Similar to styrene, initialize a strategy for water using the factory method.\n",
     "# note the strategy name is case-insensitive.\n",
     "water_coefficients = {'a': 7.949017, 'b': 1657.462, 'c': 227.02}\n",
-    "water_antione = vapor_pressure.vapor_pressure_factory(\n",
+    "water_antione = gas_vapor_pressure.vapor_pressure_factory(\n",
     "    strategy='Antoine', **water_coefficients)\n",
     "\n",
     "# Calculate and print the vapor pressures at 300 Kelvin for each substance using the initialized strategies.\n",
@@ -427,7 +427,7 @@
    "source": [
     "# Setting a constant vapor pressure at 300 K for water\n",
     "water_pure_at_300K = 1234.56  # in Pascals (Pa)\n",
-    "water_constant_strategy = vapor_pressure.vapor_pressure_factory(\n",
+    "water_constant_strategy = gas_vapor_pressure.vapor_pressure_factory(\n",
     "    strategy='constant', vapor_pressure=water_pure_at_300K)\n",
     "\n",
     "# Setting parameters for the Clausius-Clapeyron equation for water\n",
@@ -436,11 +436,11 @@
     "    'temperature_initial': 300,  # Initial temperature in Kelvin\n",
     "    'pressure_initial': water_pure_at_300K  # Initial pressure in Pascals\n",
     "}\n",
-    "water_clausius_clapeyron_strategy = vapor_pressure.vapor_pressure_factory(\n",
+    "water_clausius_clapeyron_strategy = gas_vapor_pressure.vapor_pressure_factory(\n",
     "    strategy='clausius_clapeyron', **water_clausius_clapeyron_parameters)\n",
     "\n",
     "# Using the Water Buck strategy, no additional parameters needed\n",
-    "water_buck_strategy = vapor_pressure.vapor_pressure_factory(\n",
+    "water_buck_strategy = gas_vapor_pressure.vapor_pressure_factory(\n",
     "    strategy='water_buck')\n",
     "\n",
     "# Define a range of temperatures for which to calculate vapor pressures\n",
@@ -497,7 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on function calculate_concentration in module particula.next.vapor_pressure:\n",
+      "Help on function calculate_concentration in module particula.next.gas_vapor_pressure:\n",
       "\n",
       "calculate_concentration(partial_pressure: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]], molar_mass: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]], temperature: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]]) -> Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]]\n",
       "    Calculate the concentration of a gas from its partial pressure, molar mass,\n",
@@ -517,7 +517,7 @@
     }
    ],
    "source": [
-    "help(vapor_pressure.calculate_concentration)"
+    "help(gas_vapor_pressure.calculate_concentration)"
    ]
   },
   {
@@ -529,7 +529,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on function calculate_partial_pressure in module particula.next.vapor_pressure:\n",
+      "Help on function calculate_partial_pressure in module particula.next.gas_vapor_pressure:\n",
       "\n",
       "calculate_partial_pressure(concentration: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]], molar_mass: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]], temperature: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]]) -> Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]]\n",
       "    Calculate the partial pressure of a gas from its concentration, molar mass,\n",
@@ -547,7 +547,7 @@
     }
    ],
    "source": [
-    "help(vapor_pressure.calculate_partial_pressure)"
+    "help(gas_vapor_pressure.calculate_partial_pressure)"
    ]
   },
   {
@@ -559,7 +559,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class VaporPressureStrategy in module particula.next.vapor_pressure:\n",
+      "Help on class VaporPressureStrategy in module particula.next.gas_vapor_pressure:\n",
       "\n",
       "class VaporPressureStrategy(abc.ABC)\n",
       " |  Abstract class for vapor pressure calculations. The methods\n",
@@ -659,7 +659,7 @@
     }
    ],
    "source": [
-    "help(vapor_pressure.VaporPressureStrategy)"
+    "help(gas_vapor_pressure.VaporPressureStrategy)"
    ]
   },
   {
@@ -671,9 +671,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on function vapor_pressure_factory in module particula.next.vapor_pressure:\n",
+      "Help on function vapor_pressure_factory in module particula.next.gas_vapor_pressure:\n",
       "\n",
-      "vapor_pressure_factory(strategy: str, **kwargs) -> particula.next.vapor_pressure.VaporPressureStrategy\n",
+      "vapor_pressure_factory(strategy: str, **kwargs) -> particula.next.gas_vapor_pressure.VaporPressureStrategy\n",
       "    Factory method to create a concrete VaporPressureStrategy object.\n",
       "    \n",
       "    Args:\n",
@@ -691,7 +691,7 @@
     }
    ],
    "source": [
-    "help(vapor_pressure.vapor_pressure_factory)"
+    "help(gas_vapor_pressure.vapor_pressure_factory)"
    ]
   },
   {
@@ -703,7 +703,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class ConstantVaporPressureStrategy in module particula.next.vapor_pressure:\n",
+      "Help on class ConstantVaporPressureStrategy in module particula.next.gas_vapor_pressure:\n",
       "\n",
       "class ConstantVaporPressureStrategy(VaporPressureStrategy)\n",
       " |  ConstantVaporPressureStrategy(vapor_pressure: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]])\n",
@@ -817,7 +817,7 @@
     }
    ],
    "source": [
-    "help(vapor_pressure.ConstantVaporPressureStrategy)"
+    "help(gas_vapor_pressure.ConstantVaporPressureStrategy)"
    ]
   },
   {
@@ -829,7 +829,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class AntoineVaporPressureStrategy in module particula.next.vapor_pressure:\n",
+      "Help on class AntoineVaporPressureStrategy in module particula.next.gas_vapor_pressure:\n",
       "\n",
       "class AntoineVaporPressureStrategy(VaporPressureStrategy)\n",
       " |  AntoineVaporPressureStrategy(a: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]] = 0.0, b: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]] = 0.0, c: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]] = 0.0)\n",
@@ -949,7 +949,7 @@
     }
    ],
    "source": [
-    "help(vapor_pressure.AntoineVaporPressureStrategy)"
+    "help(gas_vapor_pressure.AntoineVaporPressureStrategy)"
    ]
   },
   {
@@ -961,7 +961,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class ClausiusClapeyronStrategy in module particula.next.vapor_pressure:\n",
+      "Help on class ClausiusClapeyronStrategy in module particula.next.gas_vapor_pressure:\n",
       "\n",
       "class ClausiusClapeyronStrategy(VaporPressureStrategy)\n",
       " |  ClausiusClapeyronStrategy(latent_heat: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]], temperature_initial: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]], pressure_initial: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]])\n",
@@ -1096,7 +1096,7 @@
     }
    ],
    "source": [
-    "help(vapor_pressure.ClausiusClapeyronStrategy)"
+    "help(gas_vapor_pressure.ClausiusClapeyronStrategy)"
    ]
   },
   {
@@ -1108,7 +1108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class WaterBuckStrategy in module particula.next.vapor_pressure:\n",
+      "Help on class WaterBuckStrategy in module particula.next.gas_vapor_pressure:\n",
       "\n",
       "class WaterBuckStrategy(VaporPressureStrategy)\n",
       " |  Concrete implementation of the VaporPressureStrategy using the\n",
@@ -1226,7 +1226,7 @@
     }
    ],
    "source": [
-    "help(vapor_pressure.WaterBuckStrategy)"
+    "help(gas_vapor_pressure.WaterBuckStrategy)"
    ]
   },
   {
