gas process flake8 fix

--- a/docs/documentation/next/next_gas_species.ipynb
+++ b/docs/documentation/next/next_gas_species.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GasSpecies(name=Water)\n"
+      "Water\n"
      ]
     }
    ],
@@ -142,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GasSpecies(name=['butanol' 'styrene'])\n"
+      "['butanol' 'styrene']\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
       " |  name(self, name: Union[str, numpy.ndarray[Any, numpy.dtype[numpy.str_]]])\n",
       " |      Set the name of the gas species.\n",
       " |  \n",
-      " |  vapor_pressure_strategy(self, strategy: Union[particula.next.vapor_pressure.VaporPressureStrategy, list[particula.next.vapor_pressure.VaporPressureStrategy]])\n",
+      " |  vapor_pressure_strategy(self, strategy: Union[particula.next.gas_vapor_pressure.VaporPressureStrategy, list[particula.next.gas_vapor_pressure.VaporPressureStrategy]])\n",
       " |      Set the vapor pressure strategy for the gas species.\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -383,6 +383,13 @@
       " |  \n",
       " |  __str__(self)\n",
       " |      Return a string representation of the GasSpecies object.\n",
+      " |  \n",
+      " |  add_concentration(self, added_concentration: Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]])\n",
+      " |      Add concentration to the gas species.\n",
+      " |      \n",
+      " |      Args:\n",
+      " |      - added_concentration (float): The concentration to add to the gas\n",
+      " |          species.\n",
       " |  \n",
       " |  get_concentration(self) -> Union[float, numpy.ndarray[Any, numpy.dtype[numpy.float64]]]\n",
       " |      Get the concentration of the gas species in the mixture, in kg/m^3.\n",
@@ -497,7 +504,7 @@
       " |      Args:\n",
       " |      - name (str or NDArray[np.str_]): The name of the gas species.\n",
       " |  \n",
-      " |  set_vapor_pressure_strategy(self, strategy: Union[particula.next.vapor_pressure.VaporPressureStrategy, list[particula.next.vapor_pressure.VaporPressureStrategy]])\n",
+      " |  set_vapor_pressure_strategy(self, strategy: Union[particula.next.gas_vapor_pressure.VaporPressureStrategy, list[particula.next.gas_vapor_pressure.VaporPressureStrategy]])\n",
       " |      Set the vapor pressure strategies for the gas species.\n",
       " |      \n",
       " |      Args:\n",
